fix: Updates dnd becmi roll templates to support dark mode
- Adds CSS rules to use the defined dark mode colours for the roll template row backgrounds and text
- Updates some existing CSS rules to use defined colours rather than similar hard-coded colours
- Adds CSS rules to ensure the inline roll results are coloured in a specific manner to ensure readability

--- a/D&D_BECM/BDnDSheet.css
+++ b/D&D_BECM/BDnDSheet.css
@@ -75,9 +75,9 @@ body.sheet-darkmode .charsheet {
 }
 
 .sheet-rolltemplate-5eDefault.sheet-rolltemplate-darkmode {
-	--background: var(--dark-surface1);
-	--rt-even-row-background: var(--dark-surface2);
-	--rt-text-color: var(--dark-primarytext);
+	--background: #1f1f1f;
+	--rt-even-row-background: #353535;
+	--rt-text-color: #e6e6e6;
 }
 
 /* Roll Template */
@@ -214,11 +214,28 @@ body.sheet-darkmode .charsheet {
 	border-top: 1px dotted var(--border);
 }
 
+.sheet-rolltemplate-5eDefault .sheet-rt-card .inlinerollresult {
+    background-color: var(--el-color-black);
+    border-color: var(--el-color-black);
+    color: var(--el-color-white);
+}
+
+.sheet-rolltemplate-5eDefault .sheet-rt-card .inlinerollresult.fullcrit {
+    border-color: var(--el-color-success);
+}
+
+.sheet-rolltemplate-5eDefault .sheet-rt-card .inlinerollresult.fullfail {
+    border-color: var(--el-color-danger);
+}
+
 /* Roll Template End-ish */
 
 .charsheet {
 	padding: 0px !important;
 }
+
+/*** ROLL TEMPLATE STYLING ENDS HERE **/
+
 
 /* overall wrapper to fix moving width issues with overflow on hidden sections */
 .sheet-overall-wrapper {
